<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="app_name">Amaze File Manager</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="icon">icon</string>
    <string name="apps">App Manager</string>
    <string name="ftp">FTP Server</string>
    <string name="setting">Settings</string>
    <string name="select">Select Item</string>
    <string name="press_again">Press again to exit</string>
    <string name="open">Open</string>
    <string name="backup">Backup</string>
    <string name="uninstall">Uninstall</string>
    <string name="play">Play store</string>
    <string name="properties">Properties</string>
    <string name="copyingapks">Copying %d APK files to %s</string>
    <string name="delbook">Delete Bookmark</string>
    <string name="add_to_bookmarks">Add to Bookmarks</string>
    <string name="enterpath">Enter Path</string>
    <string name="cancel">CANCEL</string>
    <string name="create">CREATE</string>
    <string name="loading">Loading&#8230;</string>
    <string name="file_empty">File is empty</string>
    <string name="error">Error</string>
    <string name="search_results">Search results of %s</string>
    <string name="rename">Rename</string>
    <string name="save">Save</string>
    <string name="bookmarks_added">Bookmarks Added</string>
    <string name="fileexist">File with same name already exists </string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="size_capitalized">Size</string>
    <string name="size">size of folder</string>
    <string name="enterzipname">Enter Zip Name</string>
    <string name="no_app_found">No App found to open this file</string>
    <string name="copying">Copying</string>
    <string name="moving">Moving</string>
    <string name="file">File</string>
    <string name="folder">Folder</string>
    <string name="newfolder">New Folder</string>
    <string name="entername">Enter Name</string>
    <string name="extracting">Extracting</string>
    <string name="stopping">Stopping</string>
    <string name="open_parent">Open Parent Directory</string>
    <string name="open_with">Open with</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="extract">Extract</string>
    <string name="compress">Compress</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="info_glyph" translatable="false">&#9432;</string>
    <string name="dialog_delete_category_directories">Directories</string>
    <string name="dialog_delete_category_files">Files</string>
    <string name="dialog_delete_disclaimer">Deleting the items below will permanently remove them from your device and they cannot be recovered.</string>
    <string name="dialog_delete_temporarily_disclaimer">Are you sure you want to delete following items?</string>
    <string name="dialog_restore_disclaimer">Are you sure you want to restore following items?</string>
    <string name="dialog_delete_title">Delete items permanently?</string>
    <string name="deleting">Deleting</string>
    <string name="question_set_path_as_home">Do you want to set current path as home for this tab?</string>
    <string name="directorysort">Directory Sort Mode</string>
    <string name="sort_by">Sort By</string>
    <string name="sort_by_colon">Sort By:</string>
    <string name="sort_only_this">Only this folder</string>
    <string name="theme">Theme</string>
    <string name="random">Random Skin</string>
    <string name="random_summary">Sets random primary color at startup</string>
    <string name="colorize">Colorize Icons</string>
    <string name="colorize_summary">Sets static icon color. Doesn\'t override directory icon color preference.</string>
    <string name="home">Home</string>
    <string name="paste">Paste</string>
    <string name="history">History</string>
    <string name="copy">Copy</string>
    <string name="root_mode">Root Explorer</string>
    <string name="root_mode_summary">For rooted device only. Check it only if you are sure about it.</string>
    <string name="root_failure">Root Access not granted</string>
    <string name="select_all">Select All</string>
    <string name="delete">Delete</string>
    <string name="set_as_home">Set As Home</string>
    <string name="operation_not_supported">Operation not supported</string>
    <string name="light">Material Light</string>
    <string name="dark">Material Dark</string>
    <string name="daytime">Daytime</string>
    <string name="black">Black (for OLED)</string>
    <string name="system">System (follow system theme)</string>
    <string name="foldersOnTop">Folders On Top</string>
    <string name="filesOnTop">Files On Top</string>
    <string name="none_on_top">None On Top</string>
    <string name="sort_name">Name</string>
    <string name="lastModified">Last Modified</string>
    <string name="sort_size">Size</string>
    <string name="sort_relevance">Relevance</string>
    <string name="pick_a_file">Pick a file</string>
    <string name="pick_files">Pick one or more files</string>
    <string name="process_viewer">Process Viewer</string>
    <string name="in_safe">Insufficient space</string>
    <string name="no_file_overwrite">No File Overwritten</string>
    <string name="skip">Skip</string>
    <string name="overwrite">Overwrite</string>
    <string name="not_allowed">Not Allowed</string>
    <string name="searching">Searching %s</string>
    <string name="done">Done</string>
    <string name="set">Set</string>
    <string name="enablerootmde">Enable Root Mode</string>
    <string name="goback">Go Back</string>
    <string name="newfile">New File</string>
    <string name="no_files">No Files</string>
    <string name="used">used space</string>
    <string name="used_by_others">used by others</string>
    <string name="free">free space</string>
    <string name="listview">List View</string>
    <string name="gridview">Grid View</string>
    <string name="permission">Permissions</string>
    <string name="hide">Hide</string>
    <string name="exit">Exit</string>
    <string name="doforall">Do for all items</string>
    <string name="gridcolumnno">Number of columns in grid view</string>
    <string name="set_random">Changes will take place after you restart the app</string>
    <string name="authors">Authors</string>
    <string name="changelog">Changelog</string>
    <string name="ok">OK</string>
    <string name="ui">Interface</string>
    <string name="general">General</string>
    <string name="thumb_summary">Show Thumbnails of apps and images</string>
    <string name="thumb">Show Thumbnails</string>
    <string name="hidden">Show Hidden Files and Folders</string>
    <string name="lastModifiedSummary">Show the date and time of last modification</string>
    <string name="lastModifiedPref">Show Last Modified Date and Time</string>
    <string name="size_pref_summary">Show size of files and number of items in folders</string>
    <string name="size_pref">Show Sizes</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="root_pref_summary">Show Permissions of Files and Folders</string>
    <string name="root_pref">Show Permissions</string>
    <string name="about_amaze_file_manager_label">About Amaze File Manager</string>
    <string name="version">Version</string>
    <string name="rate">Rate the app</string>
    <string name="feedback">Send Feedback</string>
    <string name="hiddenfiles">Hidden Files</string>
    <string name="type">Type</string>
    <string name="root_directory">Root</string>
    <string name="add_shortcut">Add Shortcut</string>
    <string name="unsaved_changes">Unsaved Changes</string>
    <string name="unsaved_changes_description">You have unsaved changes, do you want to save them before exiting?</string>
    <string name="saving">Saving</string>
    <string name="package_installer">Package Installer</string>
    <string name="view">View</string>
    <string name="install">Install</string>
    <string name="archive">Archive</string>
    <string name="archive_text">This is an archive. What action would you like to perform?</string>
    <string name="package_installer_text">This is a package installer. What action would you like to perform?</string>
    <string name="xda_title">XDA thread</string>
    <string name="xda_summary">Q&amp;A, Help &amp; Troubleshooting</string>
    <string name="circular_images">Use circular icons for images and videos</string>
    <string name="circular_icons">Use circular icons</string>
    <string name="follow_battery_saver_title">Follow battery saver</string>
    <string name="follow_battery_saver_desc">If selected and the battery saver mode is turned on, the theme changes to dark theme</string>
    <string name="back_title">Back navigation</string>
    <string name="back_summary">Enables custom back navigation at top of the list</string>
    <string name="details">Details</string>
    <string name="translators">Translators</string>
    <string name="german_translation_title">German</string>
    <string name="italian_translation_title">Italian</string>
    <string name="french_translation_title">French</string>
    <string name="russian_translation_title">Russian</string>
    <string name="spanish_translation_title">Spanish</string>
    <string name="basque_translation_title">Basque</string>
    <string name="chinese_translation_title">Chinese</string>
    <string name="serbian_translation_title">Serbian</string>
    <string name="turkish_translation_title">Turkish</string>
    <string name="ukrainian_translation_title">Ukrainian</string>
    <string name="portuguese_translation_title">Portuguese</string>
    <string name="server_address">Server IP Address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="anonymous">Anonymous</string>
    <string name="want_help"><u>Need help?</u></string>
    <string name="find">Find in page</string>
    <string name="connection_name">Connection name</string>
    <string name="cut">Cut</string>
    <string name="domain">Domain</string>
    <string name="smb_share">Share path</string>
    <string name="security">Security</string>
    <string name="permission_read">Read</string>
    <string name="permission_write">Write</string>
    <string name="permission_execute">Execute</string>
    <string name="permission_owner">Owner</string>
    <string name="permission_group">Group</string>
    <string name="permission_other">Other</string>
    <string name="monofont">Monospace Font</string>
    <string name="ftps_enable_explicit_tls">Explicit TLS</string>
    <string name="scp_port">Port</string>
    <string name="ssh_select_pem_button">SSH Private Key</string>
    <string name="ssh_select_pem">Select private key for authentication</string>
    <string name="move">Move</string>
    <string name="scp_default_path">Default Path (Optional)</string>
    <string name="disableIpcSignature">Disable IPC signing check (For legacy SMBv1 servers - UNSAFE!)</string>
    <string name="remember">Remember for next time</string>
    <string name="appearance">Appearance</string>
    <string name="behavior">Behavior</string>
    <string name="appearance_summary">Customize the theme, colors and appearance of the file manager</string>
    <string name="ui_summary">Control what information to show, customize the sidebar, and toggle UI preferences</string>
    <string name="behavior_summary">Modify behaviors such as advanced search and whether to open files as a new task</string>
    <string name="security_summary">Set up password and encryption</string>
    <string name="backup_summary">Export/Import Amaze settings</string>
    <string name="restore">Restore</string>
</resources>