<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/cpy"
        android:icon="@drawable/ic_content_copy_white_24dp"
        android:title="@string/copy"
        app:showAsAction="always" />
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete_white_36dp"
        android:title="@string/delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/restore"
        android:icon="@drawable/round_restore_from_trash_24"
        android:title="@string/restore"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/openparent"
        android:title="@string/open_parent"
        android:visible="false" />
    <item
        android:id="@+id/cut"
        android:icon="@drawable/ic_content_cut_white_36dp"
        android:title="@string/cut"
        app:showAsAction="always" />
    <item
        android:id="@+id/all"
        android:icon="@drawable/ic_select_all_white_36dp"
        android:title="@string/select_all"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/share"
        android:title="@string/share" />
    <item
        android:id="@+id/compress"
        android:title="@string/compress" />

    <item
        android:id="@+id/openwith"
        android:title="@string/open_with" />
    <item
        android:id="@+id/hide"
        android:title="@string/hide" />
    <item
        android:id="@+id/addshortcut"
        android:title="@string/add_shortcut" />

    <item
        android:id="@+id/ex"
        android:title="@string/extract"
        android:visible="false"
        app:showAsAction="always" />
</menu>
