<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_preference_appearance"
        app:key="appearance"
        app:summary="@string/appearance_summary"
        app:title="@string/appearance" />
    <Preference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_preference_ui"
        app:key="ui"
        app:summary="@string/ui_summary"
        app:title="@string/ui" />
    <Preference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_preference_behavior"
        app:key="behavior"
        app:summary="@string/behavior_summary"
        app:title="@string/behavior" />
    <Preference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_preference_security"
        app:key="security"
        app:summary="@string/security_summary"
        app:title="@string/security" />
    <Preference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_preference_settings_backup_restore"
        app:key="backup"
        app:summary="@string/backup_summary"
        app:title="@string/backup" />
    <Preference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_preference_info"
        app:key="about"
        app:title="@string/about_amaze_file_manager_label" />
    <Preference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:key="feedback"
        app:title="@string/feedback" />

</PreferenceScreen>
