<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/connectionTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/connectionET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/connection_name"
            android:inputType="textUri" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ipTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ipET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/server_address"
            android:inputType="textUri" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/shareTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/shareET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/smb_share"
            android:inputType="textUri" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/domainTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/domainET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/domain"
            android:inputType="textUri" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/usernameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/chkSmbAnonymous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anonymous" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/chkSmbDisableIpcSignature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disableIpcSignature" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/wanthelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/want_help" />
</LinearLayout>