<?xml version="1.0" encoding="utf-8"?>


<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/permission_read" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/permission_write" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/permission_execute" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission_owner" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/creadown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cwriteown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cexeown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission_group" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/creadgroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cwritegroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cexegroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission_other" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/creadother"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cwriteother"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cexeother"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>
</TableLayout>