<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_move"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawableLeft="@drawable/ic_content_cut_white_36dp"
        android:text="@string/move"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/material_generic_medium"
        android:background="?selectableItemBackground"
        android:drawableLeft="@drawable/ic_content_copy_white_24dp"
        android:text="@string/copy"
        app:layout_constraintLeft_toRightOf="@id/button_move"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/remember_drag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_generic"
        android:text="@string/remember"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_move" />

</androidx.constraintlayout.widget.ConstraintLayout>